--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,9 +2,10 @@
 
 <div class="container">
     <h1>Escolha o campeonato</h1>
-    <div class="pagina flex">
+    <div class="pagina">
         <app-card-campeonato *ngFor="let campeonato of campeonatos" [imagemUrl]="campeonato.imagemUrl"
             [nome]="campeonato.edicao.nome"
             (click)="escolherCampeonato(campeonato.id, campeonato.nomeAbreviado, campeonato.rodada)"></app-card-campeonato>
     </div>
+    <br><br>
 </div>
