--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,23 +2,41 @@
     display: flex;
     width: 100%;
     height: 100vh;
+    
+    ::-webkit-scrollbar{
+        width: 7px;
+        &-thumb{
+            background-color: #424242;
+            border-radius: 15px;
+            border: 6px solid transparent;
+          
+        }
+
+        &-track{
+            background: transparent;
+        }
+    }
 
     .container{
         width: calc(100% - 250px);
-
-        h1{
-            text-align: center;
-            margin-top: 2rem;
-            margin-left: 2rem;
-        }
-
+        height: 100vh;
+        overflow-y: auto;
+        padding: 10px 30px;
+  
         .pagina{
             width: 100%;
-            padding: 10px;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-            overflow-y: auto;
+            display: grid;
+            grid-gap: 30px;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-auto-rows: minmax(min-content, max-content);
+            @media screen and (max-width: 1200px){
+                grid-template-columns: 1fr 1fr;
+            }
+    
+            @media screen and (max-width: 900px){
+                grid-template-columns: 1fr;
+            }
+
         }
     }
 }
