--- a/src/app/components/painel-esquerdo/painel-esquerdo.component.scss
+++ b/src/app/components/painel-esquerdo/painel-esquerdo.component.scss
@@ -71,3 +71,14 @@ $h-desconsiderar: calc($h-spotify-logo + $h-menu-opcoes + $h-footer-user);
         }
     }
 }
+
+app-botao-menu{
+    &:hover{
+        background: #302f2f;
+        border-left: 4px solid #00EB50;
+    }
+    &.selecionado{
+        background: #302f2f;
+        border-left: 4px solid #00EB50;
+    }
+}
