--- a/src/app/pages/artilharia/artilharia.component.scss
+++ b/src/app/pages/artilharia/artilharia.component.scss
@@ -1,3 +1,117 @@
-:host{
+:host {
     display: flex;
+
+    .pagina {
+        width: calc(100% - 250px);
+        padding: 10px 20px;
+        height: 100vh;
+        overflow-y: auto;
+
+        ::-webkit-scrollbar{
+            width: 7px;
+            &-thumb{
+                background-color: #424242;
+                border-radius: 15px;
+                border: 6px solid transparent;
+              
+            }
+    
+            &-track{
+                background: transparent;
+            }
+        }
+
+        
+        .texto-topo {
+            span {
+                position: relative;
+                bottom: 20px;
+                font-size: .9rem;
+                color: #9b9b9b;
+            }
+
+        }
+
+        .pesquisa {
+
+            input {
+                width: 100%;
+                padding: 10px 5px;
+                border-radius: 8px;
+                border: 1px solid;
+                border-color: #0000004d;
+                outline: none;
+                color: #202020;
+                font-size: 1rem;
+                font-weight: 500;
+
+                &::placeholder {
+                    color: #0000004d;
+                    font-size: .85rem;
+                }
+
+                &:focus,
+                &:active {
+                    color: #202020;
+                    border-color: #37AB00;
+                    border-width: 2px;
+                }
+            }
+        }
+
+        .artilharia {
+            background-color: #fff;
+            box-shadow: 0px 0px 10px #00000020;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
+       
+            table {
+                width: 100%;
+                border-collapse: collapse;
+
+                thead {
+                    th {
+                        padding-bottom: 15px;
+                        color: #9b9b9b;
+                    }
+                }
+
+                td {
+                    padding: 10px 0px 10px 0px;
+
+
+                    font-size: 1rem;
+                    color: #00000095;
+
+                    &:nth-child(1) {
+                        font-weight: 600;
+                        color: #202020;
+                        border-top-left-radius: 5px;
+                        border-bottom-left-radius: 5px;
+                    }
+
+                    &:nth-last-child(1) {
+                        font-weight: 600;
+                        font-size: 1.1rem;
+                        color: #202020;
+                        border-top-right-radius: 5px;
+                        border-bottom-right-radius: 5px;
+                    }
+
+                }
+
+                tr:nth-child(odd) {
+                    background: #ececec;
+                    border-radius: 10px;
+                    margin: 0;
+                }
+            }
+
+            .atleta {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    }
 }
