--- a/src/app/pages/artilharia/artilharia.component.html
+++ b/src/app/pages/artilharia/artilharia.component.html
@@ -30,8 +30,8 @@
                     </td>
                     <td>
                         <div class="atleta">
-                            <span>{{artilheiro.atleta.nome_popular}}</span>
-                            <span>{{artilheiro.time.sigla}}</span>
+                            <span class="nome">{{artilheiro.atleta.nome_popular}}</span>
+                            <span class="abreviacao">{{artilheiro.time.sigla}}</span>
                         </div>
                     </td>
                     <td class="center">
