--- a/src/app/pages/artilharia/artilharia.component.scss
+++ b/src/app/pages/artilharia/artilharia.component.scss
@@ -115,3 +115,13 @@
         }
     }
 }
+
+.nome{
+    color: #202020;
+}
+
+.abreviacao{
+    color: #9b9b9b;
+    font-weight: 600;
+    font-size: .9rem;
+}
