exclusao de estilos angular material

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Roboto+Slab:wght@900&display=swap");
 
+
+
 html,
 body {
     margin: 0;
     padding: 0;
     background-color: #f1f4f5;
+    * {
+        font-family: "Montserrat", sans-serif;
+        box-sizing: border-box;
+    }
+    
+    h1{
+        font-family: "Montserrat", sans-serif;
+    }
 }
 
-* {
-    font-family: "Montserrat", sans-serif;
-    box-sizing: border-box;
-}
 
 .flex {
     display: flex;
