--- a/src/app/pages/proximas-partidas/proximas-partidas.component.scss
+++ b/src/app/pages/proximas-partidas/proximas-partidas.component.scss
@@ -1,25 +1,20 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
-:host{
+:host {
     display: flex;
+    min-height: 300px;
 
-    .pagina{
-        padding: 10px 20px;
+    .pagina {
+        padding: 10px 30px;
         height: 100vh;
         overflow-y: auto;
-        width: calc(100% - 250px);
-        
-        .filtro{
-            margin: 20px 0px 20px 0px;
-            width: 200px;
-        }
+        width: calc(100vw - 250px);
+
         .jogos {
             width: 100%;
-            padding: 0px 0px 10px 0px;
             display: grid;
             grid-gap: 30px;
             grid-template-columns: 1fr 1fr 1fr;
             grid-auto-rows: minmax(min-content, max-content);
-
+            padding: 10px;
             @media screen and (max-width: 1550px) {
                 grid-template-columns: 1fr 1fr;
             }
