--- a/src/app/pages/rodadas-anteriores/rodadas-anteriores.component.html
+++ b/src/app/pages/rodadas-anteriores/rodadas-anteriores.component.html
@@ -3,19 +3,22 @@
 <div class="pagina">
     <h1>Confira as rodadas do campeonato</h1>
 
+    <div class="filtro">
+        <label>
+            Selecione a rodada
+        </label>
+        <select class="form-select" aria-label="Default select example" [(ngModel)]="rodadaSelecionada" (change)="carregarRodada(rodadaSelecionada)">
+            <option value="{{num}}" [selected]="num == idRodada-1" *ngFor="let num of numPartidas">{{num + '° Rodada'}}</option>
+        </select>
+    </div>
     <div class="jogos" *ngIf="partidas">
-        <app-painel-jogos *ngFor="let partida of partidas"
-        [nomeCampeonato]="campeonato"
-        [rodada]="rodada"
-        [data]="partida.data_realizacao" [hora]="partida.hora_realizacao"
-        [abreviacaoMandante]="partida.time_mandante.sigla" [abreviacaoVisitante]="partida.time_visitante.sigla"
-        [escudoMandante]="partida.time_mandante.escudo" [escudoVisitante]="partida.time_visitante.escudo"
-        [status]="partida.status" [placarMandante]="partida.placar_mandante"
-        [placarVisitante]="partida.placar_visitante"></app-painel-jogos>
-        
+        <app-painel-jogos *ngFor="let partida of partidaSelecionada" [nomeCampeonato]="nomeCampeonato"
+            [rodada]="rodadaSelecionada + '° Rodada'" [data]="partida.data_realizacao" [hora]="partida.hora_realizacao"
+            [abreviacaoMandante]="partida.time_mandante.sigla" [abreviacaoVisitante]="partida.time_visitante.sigla"
+            [escudoMandante]="partida.time_mandante.escudo" [escudoVisitante]="partida.time_visitante.escudo"
+            [status]="partida.status" [placarMandante]="partida.placar_mandante"
+            [placarVisitante]="partida.placar_visitante"></app-painel-jogos>
+
         <br><br>
     </div>
-
-    <h5 *ngIf="!partidas">{{ aviso }}</h5>
 </div>
-
