--- a/src/app/pages/artilharia/artilharia.component.scss
+++ b/src/app/pages/artilharia/artilharia.component.scss
@@ -2,7 +2,7 @@
     display: flex;
 
     .pagina {
-        width: calc(100% - 250px);
+        width: 100%;
         padding: 10px 20px;
         height: 100vh;
         overflow-y: auto;
