--- a/src/app/pages/equipe/equipe.component.html
+++ b/src/app/pages/equipe/equipe.component.html
@@ -1,3 +1,5 @@
 <app-painel-esquerdo></app-painel-esquerdo>
 
-<router-outlet></router-outlet>
+<div class="rotas-container">
+    <router-outlet></router-outlet>
+</div>
