--- a/src/app/pages/tabela/tabela.component.scss
+++ b/src/app/pages/tabela/tabela.component.scss
@@ -17,7 +17,7 @@
     }
 
     .container {
-        width: calc(100vw - 250px);
+        width: 100%;
         padding: 10px 40px 10px 40px;
         overflow-y: auto;
         .tabela {
