--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -18,7 +18,7 @@
     }
 
     .container{
-        width: calc(100% - 250px);
+        width: 100%;
         height: 100vh;
         overflow-y: auto;
         padding: 10px 30px;
