--- a/src/app/pages/partidas/partidas.component.scss
+++ b/src/app/pages/partidas/partidas.component.scss
@@ -6,7 +6,7 @@
         padding: 10px 30px;
         height: 100vh;
         overflow-y: auto;
-        width: calc(100vw - 250px);
+        width: 100%;
 
         .jogos {
             width: 100%;
