--- a/src/app/pages/rodadas-anteriores/rodadas-anteriores.component.html
+++ b/src/app/pages/rodadas-anteriores/rodadas-anteriores.component.html
@@ -1,19 +1,26 @@
 <app-painel-esquerdo></app-painel-esquerdo>
 
 <div class="pagina">
-    <h1>Confira as rodadas do campeonato</h1>
-
     <div class="filtro">
-        <label>
-            Selecione a rodada
-        </label>
-        <select class="form-select" aria-label="Default select example" [(ngModel)]="rodadaSelecionada" (change)="carregarRodada(rodadaSelecionada)">
-            <option value="{{num}}" [selected]="num == idRodada-1" *ngFor="let num of numPartidas">{{num + '° Rodada'}}</option>
-        </select>
+        <svg width="20" height="25" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg"
+            (click)="anterior()">
+            <path
+                d="M6.29294 0.292969L0.585938 5.99997L6.29294 11.707L7.70694 10.293L3.41394 5.99997L7.70694 1.70697L6.29294 0.292969Z"
+                fill="#20202099" />
+        </svg>
+
+        <span>{{idRodada -1}}° Rodada</span>
+        <svg width="20" height="25" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg" (click)="proximo()">
+            <path
+                d="M1.70697 11.707L7.41397 5.99997L1.70697 0.292969L0.292969 1.70697L4.58597 5.99997L0.292969 10.293L1.70697 11.707Z"
+                fill="#20202099" />
+        </svg>
+
+
     </div>
     <div class="jogos" *ngIf="partidas">
         <app-painel-jogos *ngFor="let partida of partidaSelecionada" [nomeCampeonato]="nomeCampeonato"
-            [rodada]="rodadaSelecionada + '° Rodada'" [data]="partida.data_realizacao" [hora]="partida.hora_realizacao"
+            [rodada]="idRodada-1 + '° Rodada'" [data]="partida.data_realizacao" [hora]="partida.hora_realizacao"
             [abreviacaoMandante]="partida.time_mandante.sigla" [abreviacaoVisitante]="partida.time_visitante.sigla"
             [escudoMandante]="partida.time_mandante.escudo" [escudoVisitante]="partida.time_visitante.escudo"
             [status]="partida.status" [placarMandante]="partida.placar_mandante"
