inclusao de estilos na pagina de partidas da equipe

--- a/src/app/components/painel-esquerdo/painel-esquerdo.component.html
+++ b/src/app/components/painel-esquerdo/painel-esquerdo.component.html
@@ -84,4 +84,4 @@
         </div>
     </div>
 </div>
-<app-equipes [class.mostrar-menu]="menu"></app-equipes>
+<app-equipes [class.mostrar-menu]="menu" (mouseover)="menu = true" (mouseout)="menu = false"></app-equipes>
