--- a/src/app/pages/partidas-anteriores/partidas-anteriores.component.scss
+++ b/src/app/pages/partidas-anteriores/partidas-anteriores.component.scss
@@ -58,7 +58,7 @@
 }
 
 .selecionado {
-    background-color: #00b33c;
+    background-color: #00b33c !important;
 
     span {
         color: #fff;
