--- a/src/app/pages/proximas-partidas/proximas-partidas.component.html
+++ b/src/app/pages/proximas-partidas/proximas-partidas.component.html
@@ -2,12 +2,11 @@
     <div class="botoes">
         <div>
             <button [routerLink]="['/equipe/anteriores',id]"><span>Partidas Anteriores</span></button>
-            <button [routerLink]="['/equipe/proximas',id]"><span>Proximas Partidas</span></button>
+            <button [routerLink]="['/equipe/proximas',id]" class="selecionado"><span>Proximas Partidas</span></button>
         </div>
     
         <div>
-            <button (click)="filtro = ''" *ngIf="campeonatosTime.length > 1"><span>Todas as Competições</span></button>
-            <button *ngFor="let competicoes of campeonatosTime" (click)="filtro = competicoes"><span>{{converterNomes(competicoes)}}</span></button>
+            <button *ngFor="let competicoes of campeonatosTime" (click)="escolherFiltro(competicoes)" [class.selecionado]="filtro == competicoes" ><span>{{converterNomes(competicoes)}}</span></button>
         </div>
     </div>
     
