--- a/src/app/pages/proximas-partidas/proximas-partidas.component.scss
+++ b/src/app/pages/proximas-partidas/proximas-partidas.component.scss
@@ -57,7 +57,7 @@
 }
 
 .selecionado {
-    background-color: #00b33c;
+    background-color: #00b33c !important;
 
     span {
         color: #fff;
