--- a/src/app/components/equipes/equipes.component.scss
+++ b/src/app/components/equipes/equipes.component.scss
@@ -17,7 +17,7 @@
 
     .menu-equipes{
         height: 100%;
-        background-color: #1a1a1a;
+        background-color: #202020;
         padding: 10px;
         display: flex;
         justify-content: flex-start;
