acerto detalhe css selection

--- a/src/app/pages/rodadas-anteriores/rodadas-anteriores.component.scss
+++ b/src/app/pages/rodadas-anteriores/rodadas-anteriores.component.scss
@@ -18,6 +18,13 @@
             font-weight: bold;
             color: #202020;
 
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            
             svg{
                 cursor: pointer;
             }
@@ -40,4 +47,3 @@
         }
     }
 }
-
